# libviface

./: .gitignore  CMakeLists.txt  README.rst  libviface.pc.in  uncrustify.cfg  uncrustify.sh
bindings/: CMakeLists.txt
bindings/cpp/: CMakeLists.txt  README.rst  libvifacecpp.pc.in
bindings/cpp/doc/: doxygen.conf.in  layout.conf
bindings/cpp/examples/: CMakeLists.txt
bindings/cpp/examples/basic/: CMakeLists.txt  basic.cpp
bindings/cpp/examples/dispatch/: CMakeLists.txt
bindings/cpp/examples/libtins/: CMakeLists.txt  libtins.cpp
bindings/cpp/examples/signal/: CMakeLists.txt  signal.cpp
bindings/cpp/examples/stats/: CMakeLists.txt
bindings/cpp/examples/threads/: CMakeLists.txt
bindings/cpp/examples/timeout/: timeout.cpp
bindings/cpp/examples/vifaced/: CMakeLists.txt
bindings/cpp/include/viface/: config.hpp.in  utils.hpp
bindings/cpp/include/viface/private/: viface.hpp
bindings/cpp/src/: CMakeLists.txt  viface.cpp
bindings/cpp/test/: CMakeLists.txt  catch.hpp  create.cpp
bindings/cpp/tools/uncrustify/: pre-commit  uncrustify.cfg  uncrustify.sh
bindings/go/: CMakeLists.txt  README.rst
bindings/go/src/: CMakeLists.txt
bindings/go/src/examples/: CMakeLists.txt
bindings/go/src/examples/basic/: CMakeLists.txt  basic.go
bindings/go/src/examples/stats/: CMakeLists.txt  stats.go
bindings/go/src/vifacego/: CMakeLists.txt  vifacego.go
bindings/go/src/wrapper/: wrapper.go
doc/: doxygen.conf.in  layout.conf
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  basic.c  basic.cpp
examples/dispatch/: CMakeLists.txt  dispatch.c  dispatch.cpp
examples/libtins/: CMakeLists.txt  libtins.cpp
examples/signal/: CMakeLists.txt  signal.cpp
examples/stats/: CMakeLists.txt  stats.c  stats.cpp
examples/threads/: CMakeLists.txt  threads.cpp
examples/timeout/: CMakeLists.txt  timeout.cpp
examples/vifaced/: vifaced.cpp
include/viface/: config.h.in  config.hpp.in  utils.hpp  viface.h  viface.hpp
include/viface/private/: viface.hpp
src/: CMakeLists.txt  viface.c  viface.cpp
test/: CMakeLists.txt  catch.hpp  create.cpp
tools/uncrustify/: pre-commit  uncrustify.sh
